sort.basic.selection.AlgSelectionSort.scala.error
Compilation error:
AlgSelectionSort:7: error: integer number too large
  var valMin=99999999999999999999999999999999999999999999999999999999999999999
             ^